# EducationDataAPI

./: .gitattributes  .gitignore  PLAN.md  README.md  main.py  pyproject.toml
educationdata/: __init__.py  api.py
json/: response_20240612_112427.json  response_20240612_112550.json  response_20240612_112646.json  response_20240612_112656.json  response_20240612_112741.json  response_20240612_122400.json  response_20240612_124731.json  response_20240612_125611.json  response_20240612_131834.json  response_20240612_132417.json  response_20240612_133310.json  response_20240612_133558.json  response_20240612_134631.json  response_20240612_134817.json  response_20240612_134902.json  response_20240612_140548.json  response_20240612_140641.json  response_20240612_141319.json  response_20240612_141632.json  response_20240612_142237.json  response_20240612_142449.json  response_20240612_143741.json  response_20240612_143922.json  response_20240612_145309.json  response_20240612_145501.json  response_20240612_145552.json  response_20240612_145641.json
src/educationdata/: __init__.py  _client.py  _pagination.py  _result.py
tests/: conftest.py  setup.py  test_api.py  test_ccd_directory.py  test_get_ccd_summary.py  test_metadata.py  test_unit.py
