[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urban-education-data"
version = "0.1.0"
description = "Python client for the Urban Institute Education Data Portal API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
df = ["pandas>=2.0"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/educationdata"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
